Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-4209

key eviction through flushctl is not working

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 1.7.3, 2.0-beta
    • 1.6.5, 1.7.1
    • couchbase-bucket
    • Security Level: Public
    • membase 1.6.5.5
      membase-server 1.7.1r-68-g5d4d0d7

    Description

      After the running the flushctl to evict the key and modifying the value in DB, I still get old the value.
      Here is the code to reproduce this.
      I have tried this with mbflushctl of 1.7.1 build and I get the same response.

      <?php
      $mc = new memcache();
      $mc->addserver("localhost", 11211);
      $mc->set("test", "123");
      shell_exec("/opt/membase/bin/ep_engine/management/flushctl localhost:11211 evict test");
      sleep(2);
      shell_exec(" sudo sqlite3 /db/membase/default-3.sqlite 'update kv set v=900;'");
      sleep(1);
      echo "value in sqlite DB:".shell_exec("sudo sqlite3 /db/membase/default-3.sqlite 'select v from kv;'")."\n";
      echo "value in memory:".$mc->get("test")."\n";

      ?>

      Even deleting the sqlite DB after evicting returns the old value.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            sbkrishnamurthy Sriharsha Krishnamurthy
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty