MB-4209: Evict command returns an error when key is dirty

We were returning success for for the evict command when a key
was dirty. As a result the item was not ejected, but returning a
success here is confusing. We now return EEXISTS for this case.

Change-Id: I17c8d3eace5dd6606513246e30e3ed85e11194e0
Reviewed-on: http://review.couchbase.org/16477
Reviewed-by: Michael Wiederhold <mike@couchbase.com>
Tested-by: Michael Wiederhold <mike@couchbase.com>